--- a/datahub-ui/package.json
+++ b/datahub-ui/package.json
@@ -1,8 +1,8 @@
 {
   "name": "datahub-ui",
-  "version": "0.8.4",
+  "version": "0.8.5",
   "description": "Reusable components for Planet OS Datahub",
-  "main": "src/index.js",
+  "main": "dist/datahub.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/planet-os/ui-components.git"
@@ -16,10 +16,19 @@
   "bugs": {
     "url": "https://github.com/planet-os/ui-components/issues"
   },
+  "scripts": {
+    "build": "rollup index-rollup.js -o dist/datahub.js -f umd -n datahub -g d3:d3,leaflet:L,d3-scale-chromatic:d3",
+    "build-watch": "rollup index-rollup.js -o dist/datahub.js -w -f umd -n datahub -g d3:d3,leaflet:L,d3-scale-chromatic:d3",
+    "build-min": "rollup index-rollup.js -f umd -n datahub -g d3:d3,leaflet:L,d3-scale-chromatic:d3 | uglifyjs -o ./dist/datahub-min.js -c -m"
+  },
   "homepage": "https://github.com/planet-os/ui-components#readme",
   "dependencies": {
     "leaflet": "^1.0.2",
     "d3": "^4.4.0",
     "d3-scale-chromatic": "^1.1.0"
+  },
+  "devDependencies": {
+    "rollup": "^0.41.4",
+    "rollup-watch": "^3.2.2"
   }
 }
