--- a/datahub-ui/package.json
+++ b/datahub-ui/package.json
@@ -2,7 +2,7 @@
   "name": "datahub-ui",
   "version": "0.8.6",
   "description": "Reusable components for Planet OS Datahub",
-  "main": "dist/datahub.js",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/planet-os/ui-components.git"
@@ -18,17 +18,23 @@
   },
   "src": "src/start.js src/*utils.js src/*common.js src/*data.js src/*widget.js src/*legend.js src/*palette.js src/*map.js src/*chart.js src/end.js",
   "srcChart": "src/start-chart.js src/*utils.js src/*common.js src/*data.js src/*chart.js src/end.js",
+  "srcMap": "src/start.js src/*utils.js src/*data.js src/*palette.js src/*legend.js src/*map.js src/end.js",
   "scripts": {
     "build": "uglifyjs $npm_package_src -b --wrap datahub -o dist/datahub.js",
-    "build-min": "uglifyjs $npm_package_src -b -c -m --wrap datahub -o dist/datahub-min.js",
+    "build-min": "uglifyjs $npm_package_src -c -m --wrap datahub -o dist/datahub-min.js",
     "build-chart": "uglifyjs $npm_package_srcChart -b --wrap datahub -o dist/datahub-chart.js",
-    "build-chart-min": "uglifyjs $npm_package_srcChart -b -c -m --wrap datahub -o dist/datahub-chart-min.js",
-    "build-watch": "npm-watch"
+    "build-chart-min": "uglifyjs $npm_package_srcChart -c -m --wrap datahub -o dist/datahub-chart-min.js",
+    "build-map": "uglifyjs $npm_package_srcMap -b --wrap datahub -o dist/datahub-map.js",
+    "build-map-min": "uglifyjs $npm_package_srcMap -c -m --wrap datahub -o dist/datahub-map-min.js",
+    "build-watch": "npm-watch",
+    "build-all": "npm run build; npm run build-min; npm run build-chart; npm run build-chart-min; npm run build-map; npm run build-map-min;"
   },
   "homepage": "https://github.com/planet-os/ui-components#readme",
   "dependencies": {
+    "d3": "^4.4.0"
+  },
+  "peerDependencies": {
     "leaflet": "^1.0.2",
-    "d3": "^4.4.0",
     "d3-scale-chromatic": "^1.1.0"
   },
   "devDependencies": {
