weather chart simplifying in /dev, ready for packaging

--- a/datahub-ui/package.json
+++ b/datahub-ui/package.json
@@ -41,6 +41,7 @@
     "npm-watch": "^0.1.8"
   },
   "watch": {
-    "build": "src/*.js"
+    "build": "src/*.js",
+    "build-chart": "src/*.js"
   }
 }
